<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/journal_item_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
        android:layout_marginVertical="10dp"
        android:backgroundTint="#CCFBEC"
        android:clickable="true"
        android:focusable="true" app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:id="@+id/journal_item_ConstraintLayout">

        <ImageView
                android:layout_width="86dp"
                android:layout_height="85dp"
                android:id="@+id/journal_item_icon_ImageView"
                android:contentDescription="@string/journal_item_book_icon"
                android:src="@drawable/book_icon"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/journal_item_title_TextView"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/journal_item_title_TextView"
                android:text="@string/journal_item_title"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceListItem"
                app:layout_constraintStart_toEndOf="@+id/journal_item_icon_ImageView"
                app:layout_constraintEnd_toStartOf="@+id/journal_item_date_TextView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/journal_item_date_TextView"
                android:text="@string/journal_item_date"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceListItem"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/journal_item_title_TextView"
                app:layout_constraintVertical_bias="0.492"
                app:layout_constraintHorizontal_bias="0.686"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>